kube-test1/manifest.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: ns-testM

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-testM
  namespace: ns-testM
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
        - name: cont-nginx-1
          image: nginx:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: efs-storage
              mountPath: /data
      volumes:
        - name: efs-storage
          persistentVolumeClaim:
            claimName: efs-pv-claim-app-1

---

apiVersion: v1
kind: Service
metadata:
  name: svc-app-1
  namespace: ns-testM
spec:
  selector:
    app: app-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-nginx-1
  namespace: ns-testM
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - testM.com
      secretName: tls-secret
  rules:
    - host: testM.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-app-1
                port:
                  number: 80
